fixed video visibility and footer

--- a/static/styleindex.css
+++ b/static/styleindex.css
@@ -450,6 +450,7 @@ transition: background-color 0.3s, color 0.3s;
 }
 
 .videoContaining {
+display: none;
 margin-top: 20px;
 }
 
